Change case to aCase. Type to status. Removed city, telephone.

--- a/src/app/cases/case-edit/case-edit.component.html
+++ b/src/app/cases/case-edit/case-edit.component.html
@@ -24,8 +24,8 @@
     </h2>
     <form class="form-horizontal" (ngSubmit)="onSubmit(caseForm.value)" #caseForm="ngForm">
       <div class="form-group" hidden="true">
-        <input type="text" hidden="true" class="form-control" id="id" [(ngModel)]="case.id" name="id"/>
-        <input type="text" hidden="true" class="form-control" id="user" [(ngModel)]="case.user" name="user"/>
+        <input type="text" hidden="true" class="form-control" id="id" [(ngModel)]="aCase.id" name="id"/>
+        <input type="text" hidden="true" class="form-control" id="user" [(ngModel)]="aCase.user" name="user"/>
       </div>
       <div class="form-group">
         <label for="user" class="col-sm-2 control-label">User</label>
@@ -38,14 +38,8 @@
       <div class="form-group ">
         <label for="name" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
-          <input id="name" name="name" class="form-control" type="text" [(ngModel)]="case.name"/>
+          <input id="name" name="name" class="form-control" type="text" [(ngModel)]="aCase.name"/>
         </div>
-      </div>
-      <div class="form-group ">
-        <label class="col-sm-2 control-label">Birth Date</label>
-        <input matInput [matDatepicker]="birthDateDatepicker" [ngModel]="case.birthDate | date:'yyyy-MM-dd'" name="birthDate">
-        <mat-datepicker-toggle matSuffix [for]="birthDateDatepicker"></mat-datepicker-toggle>
-        <mat-datepicker #birthDateDatepicker></mat-datepicker>
       </div>
       <div class="control-group">
         <div class="form-group ">
@@ -56,9 +50,9 @@
             </div>
             <div class="col-sm-8">
               <select id="type" name="type" class="form-control" [(ngModel)]="currentStatus">
-                <option *ngFor="let type of statuses"
-                        [selected]="type.id == currentStatus.id ? true : null"
-                        [ngValue]="type">{{ type.name }}
+                <option *ngFor="let status of statuses"
+                        [selected]="status.id == currentStatus.id ? true : null"
+                        [ngValue]="status">{{ status.name }}
                 </option>
               </select>
             </div>
@@ -68,7 +62,7 @@
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <br/>
-          <button class="btn btn-default" type="button" (click)="gotoUserDetail(case.user)">< Back</button>
+          <button class="btn btn-default" type="button" (click)="gotoUserDetail(aCase.user)">< Back</button>
           <button class="btn btn-default" type="submit">Update Case</button>
         </div>
       </div>
