--- a/src/app/statuses/status-add/status-add.component.html
+++ b/src/app/statuses/status-add/status-add.component.html
@@ -18,7 +18,7 @@
 
 <div class="container-fluid">
   <div class="container xd-container">
-    <h2>New Case Type</h2>
+    <h2>New Case Status</h2>
     <form id="status" class="form-horizontal" (ngSubmit)="onSubmit(statusForm.value)" #statusForm="ngForm">
       <div class="form-group" hidden="true">
         <input type="text" hidden="true" class="form-control" id="id" [(ngModel)]="status.id" name="id"/>
