--- a/src/app/cases/case-add/case-add.component.html
+++ b/src/app/cases/case-add/case-add.component.html
@@ -40,21 +40,13 @@
           <input id="name" name="name" class="form-control" type="text" [(ngModel)]="aCase.name"/>
         </div>
       </div>
-      <div class="form-group ">
-        <label class="col-sm-2 control-label">Birth Date</label>
-        <div class="col-sm-10">
-          <input matInput [matDatepicker]="birthDateDatepicker" [ngModel]="aCase.birthDate | date:'yyyy-MM-dd'" name="birthDate">
-          <mat-datepicker-toggle matSuffix [for]="birthDateDatepicker"></mat-datepicker-toggle>
-          <mat-datepicker #birthDateDatepicker></mat-datepicker>
-        </div>
-      </div>
       <div class="control-group">
         <div class="form-group ">
           <label for="type" class="col-sm-2 control-label">Type </label>
           <div class="col-sm-10">
-            <select id="type" name="type" class="form-control" [(ngModel)]="aCase.type">
-              <option *ngFor="let type of statuses"
-                      [ngValue]="type">{{ type.name }}
+            <select id="status" name="status" class="form-control" [(ngModel)]="aCase.status">
+              <option *ngFor="let status of statuses"
+                      [ngValue]="status">{{ status.name }}
               </option>
             </select>
           </div>
