--- a/src/app/notes/note-add/note-add.component.html
+++ b/src/app/notes/note-add/note-add.component.html
@@ -26,14 +26,12 @@
       <thead>
       <tr>
         <th>Name</th>
-        <th>Birth Date</th>
-        <th>Type</th>
+        <th>Status</th>
         <th>User</th>
       </tr>
       </thead>
       <tr>
         <td>{{ currentCase.name }}</td>
-        <td>{{ currentCase.birthDate }}</td>
         <td>{{ currentStatus.name }}</td>
         <td>{{ currentUser.firstName }} {{ currentUser.lastName }}</td>
       </tr>
@@ -45,18 +43,10 @@
       <div class="form-group has-feedback">
 
         <div class="form-group ">
-          <label class="col-sm-2 control-label">Date</label>
+          <label class="col-sm-2 control-label">details</label>
           <div class="col-sm-10">
-            <input matInput [matDatepicker]="noteDateDatepicker" [ngModel]="note.date | date:'yyyy-MM-dd'" name="date">
-            <mat-datepicker-toggle matSuffix [for]="noteDateDatepicker"></mat-datepicker-toggle>
-            <mat-datepicker #noteDateDatepicker></mat-datepicker>
-          </div>
-        </div>
-        <div class="form-group ">
-          <label class="col-sm-2 control-label">Description</label>
-          <div class="col-sm-10">
-            <input id="description" name="description" class="form-control" type="text"
-                   [(ngModel)]="note.description"/>
+            <input id="details" name="details" class="form-control" type="text"
+                   [(ngModel)]="note.details"/>
           </div>
         </div>
 
@@ -64,7 +54,7 @@
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <input type="hidden" name="id" id="id" [(ngModel)]="note.id"/>
-          <input type="hidden" name="case" id="case" [(ngModel)]="note.case"/>
+          <input type="hidden" name="aCase" id="aCase" [(ngModel)]="note.aCase"/>
           <button class="btn btn-default" type="button" (click)="gotoUserDetail()">Back</button>
           <button class="btn btn-default" type="submit">Add Note</button>
         </div>
