--- a/src/app/users/user-edit/user-edit.component.html
+++ b/src/app/users/user-edit/user-edit.component.html
@@ -46,33 +46,14 @@
           <span class="help-block" *ngIf="lastName.dirty && lastName.hasError('minlength')">Last name must be at least 2 characters long</span>
         </div>
       </div>
-      <div class="form-group has-feedback" [class.has-success]="address.valid" [class.has-error]="!address.valid">
+      <div class="form-group has-feedback" [class.has-success]="email.valid" [class.has-error]="!email.valid">
         <label for="address" class="col-sm-2 control-label">Address</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="address" [(ngModel)]="user.address" name="address" required #address="ngModel"/>
-          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="address.valid" [class.glyphicon-remove]="!address.valid" aria-hidden="true"></span>
-          <span class="help-block" *ngIf="address.dirty && address.hasError('required')">Address is required</span>
+          <input type="text" class="form-control" id="address" [(ngModel)]="user.email" name="address" required #email="ngModel"/>
+          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="email.valid" [class.glyphicon-remove]="!email.valid" aria-hidden="true"></span>
+          <span class="help-block" *ngIf="email.dirty && email.hasError('required')">Address is required</span>
         </div>
       </div>
-      <div class="form-group has-feedback" [class.has-success]="city.valid" [class.has-error]="!city.valid">
-        <label for="city" class="col-sm-2 control-label">City</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="city" [(ngModel)]="user.city" name="city" required #city="ngModel"/>
-          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="city.valid" [class.glyphicon-remove]="!city.valid" aria-hidden="true"></span>
-          <span class="help-block" *ngIf="city.dirty && city.hasError('required')">City is required</span>
-        </div>
-      </div>
-      <div class="form-group has-feedback" [class.has-success]="telephone.valid" [class.has-error]="!telephone.valid">
-        <label for="telephone" class="col-sm-2 control-label">Telephone</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="telephone" [(ngModel)]="user.telephone" name="telephone" required maxlength="10" pattern="^[0-9]{0,10}$" #telephone="ngModel"/>
-          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="telephone.valid" [class.glyphicon-remove]="!telephone.valid" aria-hidden="true"></span>
-          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('required')">Phone number is required</span>
-          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('maxlength')">Phone number cannot be more than 10 digits long</span>
-          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('pattern')" >Phone number only accept digits</span>
-        </div>
-      </div>
-
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button class="btn btn-default" (click)="gotoUserDetail(user)">Back</button>
